[UI] @AssetPanels ::: Resolved background highlighting gap

--- a/src/components/assets/subcomponent/deployedViews/tableUI/tableUI.css
+++ b/src/components/assets/subcomponent/deployedViews/tableUI/tableUI.css
@@ -60,7 +60,7 @@
 
 .DataRow{
  border-bottom: 1px solid #979797;
- margin-bottom: 2px;
+ /*margin-bottom: 2px;*/
  -webkit-transition: background-color 250ms linear;
  -moz-transition: background-color 250ms linear;
  -o-transition: background-color 250ms linear;
@@ -83,6 +83,17 @@
    /*text-indent: 3px;*/
 }
 .VarMarginHead{
+   background-color: #4e83b5;
+   color: white;
+   font-weight: bold;
+}
+.PledgeRow{
+   background-color: #4e83b5;
+   color: white;
+   font-weight: bold;
+   margin-top: 1px;
+}
+.ExcessRow{
    background-color: #4e83b5;
    color: white;
    font-weight: bold;
